Get zipCodes implementation 3