@@ -1,20 +1,25 @@
 import client.ZipCodeClient;
+import org.apache.commons.lang3.RandomStringUtils;
 import org.testng.Assert;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 import pojo.ResponseEntity;
 import utils.Const;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class ZipCodeTest {
 
     private ZipCodeClient zipCodeClient;
+    String zipCodeRand1;
+    String zipCodeRand2;
 
     @BeforeMethod
     public void setUp() {
         zipCodeClient = new ZipCodeClient();
+        zipCodeRand1 = RandomStringUtils.randomNumeric(5);
+        zipCodeRand2 = RandomStringUtils.randomNumeric(5);
     }
 
     @Test(description = "Scenario_1; bug")
@@ -26,33 +31,30 @@ public class ZipCodeTest {
 
     @Test(description = "Scenario_2")
     public void postZipCodesTest() {
-        List<String> zipCodesEnter = zipCodeClient.passZipcodes(Arrays.asList("44444", "55555", "66666"));
-        final ResponseEntity<List<String>> zipCodes = zipCodeClient.postZipCodes(zipCodesEnter);
-        Assert.assertEquals(zipCodes.getStatusCode(), Const.STATUS_201, "Isn't 201");
-        Assert.assertTrue(zipCodes.getBody().containsAll(List.of("44444", "55555", "66666")), "Zip codes aren't added");
+        final ResponseEntity<List<String>> zipCodes = zipCodeClient.postZipCodes(List.of(zipCodeRand1, zipCodeRand2));
+
+        Assert.assertEquals(zipCodes.getStatusCode(),Const.STATUS_201,"Isn't 201");
+        Assert.assertTrue(zipCodes.getBody().contains(zipCodeRand1),"Zip code wasn't added");
+        Assert.assertTrue(zipCodes.getBody().contains(zipCodeRand2),"Zip code wasn't added");
     }
 
     @Test(description = "Scenario_3; bug")
     public void postZipCodesInSentListDuplicatesTest() {
-        List<String> zipCodesToEnter = zipCodeClient.passZipcodes(Arrays.asList("MD", "MD", "MD"));
-        ResponseEntity<List<String>> zipCodes = zipCodeClient.postZipCodes(zipCodesToEnter);
-
-        int occurrences = zipCodeClient.inSentListDuplicates(zipCodes, "MD");
-
-        Assert.assertEquals(zipCodes.getStatusCode(), Const.STATUS_201, "Isn't 201");
-        Assert.assertEquals(occurrences, 1, "Duplicates were created");
+           ResponseEntity<List<String>> zipCodes = zipCodeClient.postZipCodes(List.of(zipCodeRand1, zipCodeRand1));
+           Assert.assertEquals(zipCodes.getStatusCode(),Const.STATUS_201,"Isn't 201");
+           Assert.assertEquals(Collections.frequency(zipCodes.getBody(), zipCodeRand1),
+                   1, "Duplicates were created");
     }
 
     @Test(description = "Scenario_4; bug")
     public void postZipCodesOnServerDuplicatesTest() {
-        List<String> zipCodesToEnter = zipCodeClient.passZipcodes(Arrays.asList("a", "b", "c"));
-        String[] zipArray = zipCodesToEnter.toArray(new String[0]);
+        List zipCodesOnServer = List.of("qqqqq", "22222");
+        ResponseEntity<List<String>> zipCodes = zipCodeClient.postZipCodes(zipCodesOnServer);
 
-        ResponseEntity<List<String>> zipCodes = zipCodeClient.postZipCodes(zipCodesToEnter);
-
-        int result = zipCodeClient.onServerDuplicates(zipCodes, zipArray);
-
-        Assert.assertEquals(zipCodes.getStatusCode(), Const.STATUS_201, "Isn't 201");
-        Assert.assertEquals(result, 3, "Duplicates were created");
+        Assert.assertEquals(zipCodes.getStatusCode(),Const.STATUS_201,"Isn't 201");
+        Assert.assertEquals(Collections.frequency(zipCodes.getBody(), zipCodesOnServer.get(0)),
+                1, "Duplicate was created");
+        Assert.assertEquals(Collections.frequency(zipCodes.getBody(), zipCodesOnServer.get(1)),
+                1, "Duplicate was created");
     }
 }
